--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
-<html>
+<html
 	<head>
-			<title> Hello World </title>
+			<script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
+			<title> LakeVR </title>
 	</head>
-
 	<body>
 			<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-81068901-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-			<h1> Animals </h1>
-			<p> These are my top favorite animals. </p>
-
-			<h2> Pandas </h2>
-			<p> Pandas are awesome. </p>
-			<a href="https://simple.wikipedia.org/wiki/Giant_panda">
-				<img src="panda.jpg"></img>
-			</a>
+				  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+				  ga('create', 'UA-81068901-1', 'auto');
+				  ga('send', 'pageview');
+			</script>
+			<a-scene>
+      				<a-box color="#b3ffff" width="1" height="1" depth="1"
+      							position="0 -4 3" rotation="0 90 0" scale="10 5 5"
+      							src="wood.jpg">
+      				</a-box>
+      				<a-sky src="pic.jpg"></a-sky>
+      				<a-entity id="sound-entity" sound="src: watersound.mp4; autoplay: true"></a-entity>
+   			</a-scene>
 			
-			<h2> Bunnies </h2>
-			<p> I have 4 bunnies. </p>
-			<a href="https://en.wikipedia.org/wiki/Rabbit">
-				<img src="bunnies.jpg"></img>
-			</a>
-	</body>
-</html>		
+</html>	
