--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			</script>
 			<a-scene>
       				<a-box color="#b3ffff" width="1" height="1" depth="1"
-      							position="0 -4 3" rotation="0 90 0" scale="10 5 5"
-      							src="wood.jpg">
-      				</a-box>
+      							position="0 -4 3" rotation="0 90 0" scale="15 1 17"
+      							src="wood.jpg"></a-box>
       				<a-sky src="pic.jpg"></a-sky>
-      				<a-entity id="sound-entity" sound="src: watersound.mp4; autoplay: true"></a-entity>
+      				<a-entity position="0 5 4"><a-camera></a-camera></a-entity>
+					<a-entity id="sound-entity" sound="src: watersound.mp4; autoplay: true"></a-entity>
    			</a-scene>
 			
 </html>	
