--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
-<html
-	<head>
-			<script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
-			<title> LakeVR </title>
-	</head>
-	<body>
-			<script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>SECAMEDIA</title>
+	<link href="styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+	<script>
 				  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 				  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 				  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 				  ga('create', 'UA-81068901-1', 'auto');
 				  ga('send', 'pageview');
-			</script>
-			<a-scene>
-      				<a-box color="#b3ffff" width="1" height="1" depth="1"
-      							position="0 -4 3" rotation="0 90 0" scale="15 1 17"
-      							src="wood.jpg"></a-box>
-      				<a-sky src="pic.jpg"></a-sky>
-      				<a-entity position="0 5 4"><a-camera></a-camera></a-entity>
-					<a-entity id="sound-entity" sound="src: watersound.mp4; autoplay: true"></a-entity>
-   			</a-scene>
-			
-</html>	
+	</script>
+	<body background="wood.jpg"></body>
+	<p style="font-weight: bold; color:white;position:absolute; top: 300px; left:500px;">SECA</p>
+	<a href="#" style="position:absolute; top: 600px; left:500px;"><font size="20"><font color="black">About</font></font></font></a><a href="#" style="position:absolute; top: 600px; left:620px;"><font size="20"><font color="black">Portfolio</font></font></font></a><a href="#" style="position:absolute; top: 600px; left:780px;"><font size="20"><font color="black">Contact</font></font></font></a>
+
+</body>
+</html>
